--- a/manifest.json
+++ b/manifest.json
@@ -3,18 +3,27 @@
   "name": "QuoteClipper",
   "description": "Highlight a segment of text and save it in a local storage for lookup.",
   "version": "1.0",
+  "background": {
+    "scripts": ["background/storageManager.js", "background/background.js"],
+    "persistent": false
+  },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content/quote.js"]
+      "js": ["content/content.js"]
     }
   ],
   "icons": {
-    "48": "icons/icon.png"
+    "48": "icons/icon.png",
+    "16": "icons/icon-16.png",
+    "128": "icons/icon-128.png"
   },
   "browser_action": {
     "browser_style": false,
-    "default_icon": "icons/icon.png",
-    "default_popup": "popup/popup.html"
-  }
+    "default_icon": "icons/icon.png"
+  },
+  "permissions": [
+    "contextMenus",
+    "storage"
+  ]
 }
